Add bot factory dependency
