# src/controllers/docs/property.ts
@@ -1,12 +1,21 @@
-import { IProperty } from '@controllers/types/property';
-import { userExample } from '@controllers/docs/user';
+import { IPropertyRead, IPropertyWrite } from '@controllers/types/property';
+import { baseUserExample } from './user';
 
-export const propertyExample: IProperty = {
+const basePropertyExample = {
   id: 1,
   createdAt: new Date(),
   updatedAt: new Date(),
   name: '5th Avenue',
-  user: userExample,
   minRent: 100.5,
   maxRent: 10000
+};
+
+export const propertyReadExample: IPropertyRead = {
+  ...basePropertyExample,
+  user: baseUserExample
+};
+
+export const propertyWriteExample: IPropertyWrite = {
+  ...basePropertyExample,
+  userId: baseUserExample.id!
 };
